Fix display on narrow screens

--- a/less/admin-ui/admin/application.less
+++ b/less/admin-ui/admin/application.less
@@ -18,6 +18,7 @@ body {
   padding: 10px;
   margin: 15px;
   background: #ffffff;
+  width: fit-content;
 }
 footer {
   margin-top: -70px;
@@ -225,6 +226,7 @@ footer p {
 /* --- Begin Application::List --- */
 .list-column {
   vertical-align: middle !important;
+  white-space: nowrap;
 }
 /* ---- Begin Application::List::Selectboxes ---- */
 .list-selectable {
@@ -247,6 +249,7 @@ footer p {
   position: relative;
   text-align: right;
   height: 100%;
+  display: flex;
 }
 .list-row-action-wrapper-link {
   color: #7f8ca3;
@@ -254,6 +257,7 @@ footer p {
   padding: 4px;
   display: inline-block;
   visibility: hidden;
+  transition: 0s;
 
   &.medium {
     font-size: 1.2em;
